# slope-package-paper

./: .gitignore  .gitmodules  .latexindent.yaml  LICENSE  Project.toml  README.md  Taskfile.yml  apptainer_path.def  apptainer_single.def  article.R  bench_config_path.yml  bench_config_single.yml  comments.md  cover-letter-resubmission.tex  cover-letter.tex  flake.nix  jss-example.tex  jss-submission-README.md  main.bib  main.tex  pbs_config.sh  pbs_config_path.sh  pbs_submit.sh  pbs_submit_path.sh  pbs_worker.sh  pbs_worker_path.sh
.github/workflows/: test-reproducibility.yml
code/: 41598_2023_38243_MOESM2_ESM.xlsx  CMakeLists.txt  diabetes.R  example.R  example.cpp  example.jl  example.py  glioma_dat.RDS  plot_benchmark_path.py  plot_benchmark_real.py  plot_benchmark_simul.py  plot_thresholding.py  prepare_data.R  real-data.R
data/: diabetes.csv
hpc/benchmark_slope/: pbs_config.sh  pbs_submit.sh  pbs_worker.sh
results/path_0603_132913/: benchopt_run_2025-06-03_13h29m47.parquet  benchopt_run_2025-06-03_13h29m48.parquet  benchopt_run_2025-06-03_13h29m50.parquet  benchopt_run_2025-06-03_13h29m51.parquet  benchopt_run_2025-06-03_13h30m07.parquet  benchopt_run_2025-06-03_13h30m21.parquet
results/path_0606_144140/: benchopt_run_2025-06-06_14h42m02.parquet  benchopt_run_2025-06-06_14h42m03.parquet  benchopt_run_2025-06-06_14h42m04.parquet  benchopt_run_2025-06-06_14h42m13.parquet  (+12 more)
scripts/: plot_benchmark_path.py  plot_benchmark_real.py  plot_benchmark_simul.py  plot_thresholding.py
slopeutils/: __init__.py  merge_parquet.py  plot_utils.py
tex/: macros.tex
(+36 files in other folders)
